# word-counter

./: .gitignore  Cargo.toml  README.md  index.html
src/: lib.rs  main.css  main.rs
src/components/atoms/: main.css  main_title.rs  mod.rs  text_input.rs  word_counter.rs
src/components/molecules/: custom_form.rs  main.css
