[package]
name = "yew_app"
version = "0.1.0"
edition = "2021"

[dependencies]
# you can check the latest version here: https://crates.io/crates/yew
yew = "0.19.3"
stylist = { version = "0.10.1", features = ["yew"] }
gloo = "0.6.1"
wasm-bindgen = "0.2.79"
web-sys = { version = "0.3.56", features = ["HtmlInputElement"] }
